--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>SWB Aeroplan</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -8,16 +9,51 @@
 
   <!-- Bootstrap CDN -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	
+
 	<!-- Bootstrap Rendering/Touch Zooming -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
+
 <body>
+	<!-- Nav Bar -->
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<!-- Nav Bar Hamburger -->
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				  <span class="sr-only">toggle navigation</span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				</button>
+
+				<!-- Nav Bar Logo -->
+				<a class="navbar-brand" href="#">
+					<img alt="swb" src="https://beyondmiles.aeroplan.com/uploads/aas/pooling/11/logo_eng_original.jpg">
+				</a>
+			</div>
+
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="active">
+						<a href="#">About <span class="sr-only">(current)</span></a>
+					</li>
+					<li>
+						<a href="#">Contact</a>
+					</li>
+				</ul>
+
+	      <button type="button" class="btn btn-default navbar-btn">Donate Now</button>
+			</div>
+		</div>
+	</nav>
 
 	<%= yield %>
 
   <!-- Bootstrap CDN Script -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
+
 </html>
+
