--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 
 <body>
 	<!-- Nav Bar -->
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container" id="navbar">
 			<div class="navbar-header">
 				<!-- Nav Bar Hamburger -->
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -44,7 +44,7 @@
 					</li>
 				</ul>
 
-	      <button type="button" class="btn btn-default navbar-btn">Donate Now</button>
+	      <button type="button" class="btn btn-default navbar-btn navbar-right">Donate Now</button>
 			</div>
 		</div>
 	</nav>
