add placeholder banner

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,13 @@
 #navbar {
 	width: 2000px;
 }
+
+#swb-logo {
+	width: 50px;
+}
+
+#banner {
+	width: 2000px;
+	height: 400px;
+	background-color: #8879A9;
+}
