--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container" id="navbar">
 			<div class="navbar-header">
-				<!-- Nav Bar Hamburger -->
+				<!-- Hamburger -->
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 				  <span class="sr-only">toggle navigation</span>
 				  <span class="icon-bar"></span>
@@ -28,13 +28,14 @@
 				  <span class="icon-bar"></span>
 				</button>
 
-				<!-- Nav Bar Logo -->
+				<!-- SWB Logo -->
 				<a class="navbar-brand" href="#">
-					<img alt="swb" src="https://beyondmiles.aeroplan.com/uploads/aas/pooling/11/logo_eng_original.jpg">
+					<img id="swb-logo" alt="swb" src="https://beyondmiles.aeroplan.com/uploads/aas/pooling/11/logo_eng_original.jpg">
 				</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<!-- Links -->
 				<ul class="nav navbar-nav">
 					<li class="active">
 						<a href="#">About <span class="sr-only">(current)</span></a>
@@ -44,10 +45,16 @@
 					</li>
 				</ul>
 
+				<!-- Donate Button -->
 	      <button type="button" class="btn btn-default navbar-btn navbar-right">Donate Now</button>
 			</div>
 		</div>
 	</nav>
+
+	<!-- Banner -->
+	<div class="container" id="banner">
+		
+	</div>
 
 	<%= yield %>
 
