--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,11 @@
 }
 
 #banner {
+	background-color: white;
+}
+
+#banner-content {
 	width: 2000px;
-	height: 400px;
+	height: 350px;
 	background-color: #8879A9;
 }
