--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,8 +52,10 @@
 	</nav>
 
 	<!-- Banner -->
-	<div class="container" id="banner">
-		
+	<div class="jumbotron" id="banner">
+		<div class="container" id="banner-content">
+			<h3>{{ aeroplan banner }}</h3>
+		</div>
 	</div>
 
 	<%= yield %>
