--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,12 +54,18 @@
 	<!-- Banner -->
 	<div class="jumbotron" id="banner">
 		<div class="container" id="banner-content">
-			<h3>{{ aeroplan banner }}</h3>
+			<h3></h3>
 		</div>
 	</div>
 
 	<%= yield %>
 
+	<!-- Footer -->
+	<footer class="footer">
+		<div class="container">
+			<p>Copyright 2015</p>
+		</div>
+	</footer>
   <!-- Bootstrap CDN Script -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
