--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,5 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * This is a manifest file that'll be compileD into application.css, which will include all the files
  * listed below.
  *
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
@@ -28,4 +28,11 @@
 #banner-content {
 	height: 250px;
 	background-color: #8879A9;
+}
+
+.footer {
+	margin-top: 100px;
+	padding-top: 20px;
+	height: 60px;
+  background-color: #D1D2D4;
 }
