--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,15 +2,15 @@
 	<div class="row">
 		<% @organizations.each do |org| %>
 			<div class="col-xs-6 col-md-2" id="org-image">
-				<a href="#" class="thumbnail">
+				<%= link_to(org, class: "thumbnail") do %>
 					<img src="<%= org.image %>">
-				</a>
+				<% end %>
 			</div>
 
-			<div class="col-xs-6 col-md-2" id="org-name">
-				<a href="#" class="thumbnail">
+			<div class="col-xs-6 col-md-2" id="org-image">
+				<%= link_to(org, class: "thumbnail") do %>
 					<%= org.name %>
-				</a>
+				<% end %>
 			</div>
 		<% end %>
 	</div>
