add donate blurb and button to home page

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -14,4 +14,11 @@
 			</div>
 		<% end %>
 	</div>
+	
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<h3>Your Aeroplan Miles giving projects the wings to take flight!</h3>
+      <button type="button" class="btn btn-default">Donate Today</button>
+		</div>
+	</div>
 </div>
