--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,19 +29,21 @@
 				</button>
 
 				<!-- SWB Logo -->
-				<a class="navbar-brand" href="#">
+				<%= link_to(root_path, class: "navbar-brand") do %>
 					<img id="swb-logo" alt="swb" src="https://beyondmiles.aeroplan.com/uploads/aas/pooling/11/logo_eng_original.jpg">
-				</a>
+				<% end %>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<!-- Links -->
 				<ul class="nav navbar-nav">
 					<li class="active">
-						<a href="#">About <span class="sr-only">(current)</span></a>
+						<%= link_to(about_path) do %>
+							About <span class="sr-only">(current)</span>
+						<% end %>
 					</li>
 					<li>
-						<a href="#">Contact</a>
+						<%= link_to "Contact", contact_path %>
 					</li>
 				</ul>
 
