build about page layout with placeholder information

--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -1,2 +1,51 @@
-<h1>Beyondmiles#about</h1>
-<p>Find me in app/views/beyondmiles/about.html.erb</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+			<h2>What is the Aeroplan Miles Campaign?</h2>
+			<p>
+				Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
+
+				Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
+
+				His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
+			</p>
+		</div>
+
+		<div class="col-md-4">
+			<div class="thumbnail" id="about">
+				<img alt="aeroplan-miles" src="http://musicounts.ca/wp-content/uploads/2012/11/Aero_BeyondMile_EN-300x300.jpg">
+			</div>
+		</div>
+
+		<h2>Why participate in the Aeroplan Miles Campaign?</h2>
+		<p>
+			Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
+
+			Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
+
+			His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
+		</p>
+
+		<h2>Community & Corporate Partnerships</h2>
+		<p>
+			Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
+
+			Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
+
+			His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
+		</p>
+	</div>
+
+	<div class="row text-center">
+		<%= link_to("http://www.facebook.com", target: "blank") do %>
+			<img alt="facebook" src="">
+		<% end %>
+		<%= link_to("http://www.twitter.com", target: "blank") do %>
+			<img alt="twitter" src="">
+		<% end %>
+		<%= link_to("http://www.instagram.com", target: "blank") do %>
+			<img alt="instagram" src="">
+		<% end %>
+	</div>
+
+</div>
