add rows and column widths for equal spacing

--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -17,35 +17,46 @@
 			</div>
 		</div>
 
-		<h2>Why participate in the Aeroplan Miles Campaign?</h2>
-		<p>
-			Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
+	</div>
 
-			Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Why participate in the Aeroplan Miles Campaign?</h2>
+			<p>
+				Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
 
-			His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
-		</p>
+				Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
 
-		<h2>Community & Corporate Partnerships</h2>
-		<p>
-			Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
+				His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
+			</p>
+		</div>
+	</div>
 
-			Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Community & Corporate Partnerships</h2>
+			<p>
+				Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
 
-			His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
-		</p>
+				Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
+
+				His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
+			</p>
+		</div>
 	</div>
 
 	<div class="row text-center">
-		<%= link_to("http://www.facebook.com", target: "blank") do %>
-			<img alt="facebook" src="">
-		<% end %>
-		<%= link_to("http://www.twitter.com", target: "blank") do %>
-			<img alt="twitter" src="">
-		<% end %>
-		<%= link_to("http://www.instagram.com", target: "blank") do %>
-			<img alt="instagram" src="">
-		<% end %>
+		<div class="col-md-12">
+			<%= link_to("http://www.facebook.com", target: "blank") do %>
+				<img alt="facebook" src="">
+			<% end %>
+			<%= link_to("http://www.twitter.com", target: "blank") do %>
+				<img alt="twitter" src="">
+			<% end %>
+			<%= link_to("http://www.instagram.com", target: "blank") do %>
+				<img alt="instagram" src="">
+			<% end %>
+		</div>
 	</div>
 
 </div>
