add breaks between swb address and change button class

--- a/app/views/beyondmiles/contact.html.erb
+++ b/app/views/beyondmiles/contact.html.erb
@@ -7,11 +7,13 @@
 			</p>
 			<p>
 				37 Bulwer St.
+				<br>
 				Toronto ON
+				<br>
 				M5T 1A1
 			</p>
 
-			<a href="mailto:info@swb.ca?subject=Aeroplan%20Miles%20Campaign%20Inquiry" role="button" class="btn btn-default">E-MAIL SWB</a>
+			<a href="mailto:info@swb.ca?subject=Aeroplan%20Miles%20Campaign%20Inquiry" role="button" class="btn btn-info">E-MAIL SWB</a>
 
 		</div>
 	</div>
