--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,11 +2,14 @@
 	<div class="row">
 		<% @organizations.each do |org| %>
 			<div class="col-xs-6 col-md-2">
+				<div>
+					
+				</div>
 				<%= link_to(org, class: "thumbnail org-image") do %>
 					<img alt="<%= org.name %>" src="<%= org.image %>">
 				<% end %>
-				
-				<div class="col-xs-6 col-md-2 org-name">
+
+				<div class="org-name">
 					<%= link_to(org, class: "thumbnail") do %>
 						<%= org.name %>
 					<% end %>
@@ -18,7 +21,7 @@
 	
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h3>Your Aeroplan Miles giving projects the wings to take flight!</h3>
+			<h3>Your Aeroplan Miles give projects the wings to take flight!</h3>
       <button type="button" class="btn btn-default">Donate Today</button>
 		</div>
 	</div>
