--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container orgs-grid">
 	<div class="row">
 		<% @organizations.each do |org| %>
-			<div class="col-xs-6 col-md-2 org-info">
+			<div class="col-xs-6 col-md-2 thumbnail org-info">
 				<div class="org-image">
-					<%= link_to(org, class: "thumbnail") do %>
+					<%= link_to(org) do %>
 						<img alt="<%= org.name %>" src="<%= org.image %>">
 					<% end %>
 				</div>
 
 				<div class="org-name">
-					<%= link_to(org, class: "thumbnail") do %>
+					<%= link_to(org) do %>
 						<%= org.name %>
 					<% end %>
 				</div>
