center org name text

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -8,7 +8,7 @@
 					<% end %>
 				</div>
 
-				<div class="org-name">
+				<div class="org-name text-center">
 					<%= link_to(org) do %>
 						<%= org.name %>
 					<% end %>
