update about page with actual content and vimeo video

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -20,7 +20,7 @@
 	
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h3>Your Aeroplan Miles give projects the wings to take flight!</h3>
+			<h3>Your Aeroplan Miles fuel the most dynamic learning initiatives around the world!</h3>
       <button type="button" class="btn btn-default">Donate Today</button>
 		</div>
 	</div>
