--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -1,62 +1,38 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-8">
-			<h2>What is the Aeroplan Miles Campaign?</h2>
+		<div class="col-md-6">
+			<h2>2015 Learning Beyond Miles</h2>
 			<p>
-				Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
-
-				Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
-
-				His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
+				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. The results: life-changing experiences that build a just, sustainable and thriving world.
 			</p>
-		</div>
+			<p>
+				Since the launch of Beyond Miles in 2006, SWB has raised an impressive 12 million Aeroplan miles and fueled over 100 projects, positively impacting 20,000+ people in 50+ countries. The numbers only begin to tell the story.
+			</p>
 
-		<div class="col-md-4">
-			<div class="thumbnail" id="about">
-				<img alt="aeroplan-miles" src="http://musicounts.ca/wp-content/uploads/2012/11/Aero_BeyondMile_EN-300x300.jpg">
+			<div class="row">
+				<div class="col-md-12">
+					<%= link_to("http://www.facebook.com", target: "blank") do %>
+						<img alt="facebook" src="">
+					<% end %>
+					<%= link_to("http://www.twitter.com", target: "blank") do %>
+						<img alt="twitter" src="">
+					<% end %>
+					<%= link_to("http://www.instagram.com", target: "blank") do %>
+						<img alt="instagram" src="">
+					<% end %>
+				</div>
 			</div>
 		</div>
 
-	</div>
-
-	<div class="row">
-		<div class="col-md-12">
-			<h2>Why participate in the Aeroplan Miles Campaign?</h2>
-			<p>
-				Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
-
-				Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
-
-				His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
-			</p>
+		<div class="col-md-6">
+				<iframe src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
+				<p>
+					<a href="http://vimeo.com/38347305">Make Your Miles Matter</a>
+					from
+					<a href="http://vimeo.com/goldennugget">Golden Nugget Productions</a>
+					on
+					<a href="https://vimeo.com">Vimeo</a>
+				</p>
 		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md-12">
-			<h2>Community & Corporate Partnerships</h2>
-			<p>
-				Lorem ipsum dolor sit amet, accumsan intellegam et sea. Vix augue perfecto percipitur eu. Ius te sonet copiosae tractatos, est ne mentitum oportere. Quod error feugait usu id. Mel te aliquam ocurreret percipitur, ex illud nobis delicata mea. Nam id ignota detraxit.
-
-				Sanctus fierent constituam mel et, id sale debitis ancillae vis, sed tibique moderatius suscipiantur ex. Ad sed magna lobortis repudiandae, aperiam laboramus mei ne. Ex usu putant utroque legendos. Paulo impetus ex vim, pericula interesset at vix. Movet voluptatum per in, epicuri dolores vel eu.
-
-				His alia verear an, sed te nihil populo delicatissimi, fuisset detraxit eos ad. Usu in fugit impetus posidonium, pri cu sonet fastidii disputando. Qui te error eleifend conclusionemque. Nec cu debet dolores.
-			</p>
-		</div>
-	</div>
-
-	<div class="row text-center">
-		<div class="col-md-12">
-			<%= link_to("http://www.facebook.com", target: "blank") do %>
-				<img alt="facebook" src="">
-			<% end %>
-			<%= link_to("http://www.twitter.com", target: "blank") do %>
-				<img alt="twitter" src="">
-			<% end %>
-			<%= link_to("http://www.instagram.com", target: "blank") do %>
-				<img alt="instagram" src="">
-			<% end %>
-		</div>
-	</div>
-
+	</div>	
 </div>
