add swb logo into imgs folder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 
 				<!-- SWB Logo -->
 				<%= link_to(root_path, class: "navbar-brand") do %>
-					<img id="swb-logo" alt="swb" src="https://beyondmiles.aeroplan.com/uploads/aas/pooling/11/logo_eng_original.jpg">
+					<img id="swb-logo" alt="swb" src="http://localhost:3000/imgs/swb-logo.png">
 				<% end %>
 			</div>
 
