add partner images and aeroplaeroplan banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 	<!-- Banner -->
 	<div class="jumbotron" id="banner">
 		<div class="container" id="banner-content">
-			<h3></h3>
+			<img id="banner" alt="swb" src="http://localhost:3000/imgs/banner.png">
 		</div>
 	</div>
 
