--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -4,7 +4,7 @@
 			<div class="col-xs-6 col-md-2 thumbnail org-info">
 				<div class="org-image">
 					<%= link_to(org) do %>
-						<img id="org-image" alt="<%= org.name %>" src="<%= org.image %>">
+						<img class="img-responsive" alt="<%= org.name %>" src="<%= org.image %>">
 					<% end %>
 				</div>
 
