--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,10 +1,20 @@
 <div class="container orgs-grid">
-	<div class="row">
+	<div class="row donate-today">
+		<div class="col-md-12 text-center">
+			<h3>
+				Your Aeroplan Miles fuel the most dynamic learning initiatives around the world!
+				<br>Click below to see how your donations take Learning Beyond Miles.
+			</h3>
+      <button type="button" class="btn btn-default">Donate Today</button>
+		</div>
+	</div>
+
+	<div class="row seven-cols">
 		<% @organizations.each do |org| %>
-			<div class="col-xs-6 col-md-2 thumbnail org-info">
+			<div class="col-md-1 thumbnail org-info">
 				<div class="org-image">
 					<%= link_to(org) do %>
-						<img class="img-responsive" alt="<%= org.name %>" src="<%= org.image %>">
+						<img class="img-responsive" id="org-image" alt="<%= org.name %>" src="<%= org.image %>">
 					<% end %>
 				</div>
 
@@ -18,10 +28,4 @@
 		<% end %>
 	</div>
 	
-	<div class="row">
-		<div class="col-md-12 text-center">
-			<h3>Your Aeroplan Miles fuel the most dynamic learning initiatives around the world!</h3>
-      <button type="button" class="btn btn-default">Donate Today</button>
-		</div>
-	</div>
 </div>
