--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,57 +16,16 @@
 </head>
 
 <body>
-	<!-- Nav Bar -->
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container" id="navbar">
-			<div class="navbar-header">
-				<!-- Hamburger -->
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-				  <span class="sr-only">toggle navigation</span>
-				  <span class="icon-bar"></span>
-				  <span class="icon-bar"></span>
-				  <span class="icon-bar"></span>
-				</button>
-
-				<!-- SWB Logo -->
-				<%= link_to(root_path, class: "navbar-brand") do %>
-					<img id="swb-logo" alt="swb" src="http://localhost:3000/imgs/swb-logo.png">
-				<% end %>
-			</div>
-
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<!-- Links -->
-				<ul class="nav navbar-nav">
-					<li>
-						<%= link_to(about_path) do %>
-							About <span class="sr-only">(current)</span>
-						<% end %>
-					</li>
-					<li>
-						<%= link_to "Contact", contact_path %>
-					</li>
-				</ul>
-
-				<!-- Donate Button -->
-	      <button type="button" class="btn btn-default navbar-btn navbar-right">Donate Now</button>
-			</div>
-		</div>
-	</nav>
-
-
+	<%= render 'layouts/navbar' %>
+	
 	<div id="page-wrap">
-		<!-- Banner -->
-		<div class="container banner"></div>
-
+		<div class="banner"></div>
 		<%= yield %>
+
 	</div>
 
-	<!-- Footer -->
-	<footer class="footer">
-		<div class="container">
-			<p>Copyright 2015</p>
-		</div>
-	</footer>
+	<%= render 'layouts/footer' %>
+
   <!-- Bootstrap CDN Script -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
