change hover feature from org name to image opacity

--- a/app/assets/stylesheets/organizations.css
+++ b/app/assets/stylesheets/organizations.css
@@ -7,10 +7,19 @@
 	height: 200px;
 }
 
-#org-image {
-	height: 185px;
+.org-image {
+	opacity: 0.4;
 }
 
 .donate-today {
 	margin-bottom: 35px;
+}
+
+.btn-donate {
+	background-color: rgba(194, 139, 46, 1);
+	color: white;
+}
+
+.btn-donate:hover {
+	background-color: rgba(194, 139, 46, 0.8);
 }
