--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-fixed-top">
 	<div class="container" id="navbar">
 		<div class="navbar-header">
 			<!-- Hamburger -->
@@ -15,21 +15,24 @@
 			<% end %>
 		</div>
 
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<div class="collapse navbar-collapse navbar-right">
 			<!-- Links -->
 			<ul class="nav navbar-nav">
 				<li>
 					<%= link_to(about_path) do %>
-						About <span class="sr-only">(current)</span>
+						ABOUT <span class="sr-only">(current)</span>
 					<% end %>
 				</li>
 				<li>
-					<%= link_to "Contact", contact_path %>
+					<%= link_to "CONTACT", contact_path %>
+				</li>
+				<li>
+					<%= link_to "DONATE", contact_path %>
 				</li>
 			</ul>
 
 			<!-- Donate Button -->
-      <button type="button" class="btn btn-default navbar-btn navbar-right">Donate Now</button>
+      <!-- <button type="button" class="btn btn-default navbar-btn navbar-right">Donate Now</button> -->
 		</div>
 	</div>
 </nav>
