--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -18,7 +18,7 @@
 					<% end %>
 				</div>
 
-				<div class="org-name text-center">
+				<div class="text-center">
 					<%= link_to(org) do %>
 						<%= org.name %>
 					<% end %>
@@ -27,5 +27,4 @@
 			</div>
 		<% end %>
 	</div>
-	
 </div>
