--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container" id="navbar">
 		<div class="navbar-header">
 			<!-- Hamburger -->
@@ -15,7 +15,7 @@
 			<% end %>
 		</div>
 
-		<div class="collapse navbar-collapse navbar-right">
+		<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 			<!-- Links -->
 			<ul class="nav navbar-nav">
 				<li>
