--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,7 +27,7 @@
 					<%= link_to "CONTACT", contact_path %>
 				</li>
 				<li>
-					<%= link_to "DONATE", contact_path %>
+					<%= link_to "DONATE" %>
 				</li>
 			</ul>
 
