--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<h2>2015 Learning Beyond Miles</h2>
+			<h2>ABOUT LEARNING BEYOND MILES</h2>
 			<p>
 				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. The results: life-changing experiences that build a just, sustainable and thriving world.
 			</p>
@@ -24,15 +24,22 @@
 			</div>
 		</div>
 
-		<div class="col-md-6">
-				<iframe src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
-				<p>
-					<a href="http://vimeo.com/38347305">Make Your Miles Matter</a>
-					from
-					<a href="http://vimeo.com/goldennugget">Golden Nugget Productions</a>
-					on
-					<a href="https://vimeo.com">Vimeo</a>
-				</p>
+		<div class="col-md-6 hidden-xs">
+				<iframe class="embed-responsive-item" src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
+				<a href="http://vimeo.com/38347305">Make Your Miles Matter</a>
+				from
+				<a href="http://vimeo.com/goldennugget">Golden Nugget Productions</a>
+				on
+				<a href="https://vimeo.com">Vimeo</a>
+		</div>
+
+		<div class="col-xs-12 embed-responsive embed-responsive-4by3 visible-xs">
+				<iframe class="embed-responsive-item" src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
+				<a href="http://vimeo.com/38347305">Make Your Miles Matter</a>
+				from
+				<a href="http://vimeo.com/goldennugget">Golden Nugget Productions</a>
+				on
+				<a href="https://vimeo.com">Vimeo</a>
 		</div>
 	</div>	
 </div>
