--- a/app/views/beyondmiles/contact.html.erb
+++ b/app/views/beyondmiles/contact.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-12">
-			<h2>Contact Us</h2>
+		<div class="col-md-8 col-md-offset-2 text-center">
+			<h2>CONTACT US</h2>
 			<p>
-				Keep in touch and come to say hello! SWB lives with a handful of Toronto’s most innovative and prolific organizations in the heart of the cities arts & culture district. Our community always serves as inspiration and we invite you to visit us, connect with us and help us to learn with your wisdom.
+				Keep in touch and come say hello!
+			<p>
+				SWB lives with a handful of Toronto’s most innovative and prolific organizations in the heart of the cities arts & culture district. Our community always serves as inspiration and we invite you to visit us, connect with us and help us to learn with your wisdom.
 			</p>
 			<p>
 				37 Bulwer St.
