--- a/app/assets/stylesheets/organizations.css
+++ b/app/assets/stylesheets/organizations.css
@@ -1,10 +1,42 @@
-.org-info {
-	height: 175px;
+.org-banner {
+	background-image: url('http://localhost:3000/imgs/org-banner.png');
+	height: 350px;
+	background-size: 100% auto;
+	padding-top: 125px;
+	margin-bottom: 25px;
 }
 
-.org-name {
-	display: none;
+.org-info {
 	height: 200px;
+}
+
+.org-name-hq {
+	height: 200px;
+	padding-top: 12px;
+}
+
+a.org-title {
+	color: #000;
+}
+
+a:hover.org-title {
+	color: #000;
+	text-decoration: none;
+}
+
+a.org-name {
+	color: #000;
+}
+
+a:hover.org-name {
+	color: #54B2A4;
+	text-decoration: none;
+}
+
+p.org-hq {
+	font-family: 'Oswald', sans-serif;
+	font-size: 12px;
+	color: #555;
 }
 
 .org-image {
