--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,30 +1,22 @@
-<div class="org-banner text-center">
-	<h1>
-		<%= link_to(@organization.website, class: "org-title", target: "blank") do %>
-			<%= @organization.name.upcase %>
-		<% end %>
-	</h1>
-	<h4><%= @organization.headquarters.upcase %></h4>
+<div class="org-banner text-center" style="background-image: url(<%= @organization.image %>)">
+	<div class="org-banner-title">
+		<h1>
+			<%= link_to(@organization.website, class: "org-title", target: "blank") do %>
+				<%= @organization.name.upcase %>
+			<% end %>
+		</h1>
+		<h4><%= @organization.headquarters.upcase %></h4>
+	</div>
 </div>
 
 <div class="container">
 
 	<div class="row">
 		<div class="col-sm-6 col-md-8 col-md-offset-2 text-center">
-			<div class="thumbnail">
-				<!-- <img alt="<%= @organization.name %>" src="<%= @organization.image %>"> -->
-			</div>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-sm-6 col-md-8 col-md-offset-2 text-center">
-		<!-- <div class="col-md-8 text-center"> -->
 			<p><%= @organization.description %></p>
 			<%= link_to(@organization.website, target: "blank") do %>
 				<%= @organization.website %>
 			<% end %>
-		<!-- </div> -->
 	</div>
 
 	<div class="row">
