add media query for responsive org banner

--- a/app/assets/stylesheets/banner.css
+++ b/app/assets/stylesheets/banner.css
@@ -1,4 +1,4 @@
-.banner {
+.aeroplan-banner {
 	height: 500px;
 	width: 100%;
 	background-size: 100% auto;
@@ -8,13 +8,13 @@
 }
 
 @media(max-width: 766px){
-	.banner { 
+	.aeroplan-banner { 
 		height: 100px;
 	}
 }
 
 @media(min-width: 767px) and (max-width: 1024px){
-	.banner {
+	.aeroplan-banner {
 		height: 300px;
 	}
 }
