--- a/app/assets/stylesheets/beyondmiles.css
+++ b/app/assets/stylesheets/beyondmiles.css
@@ -1,8 +1,17 @@
+.page-banner {
+	background-image: url('http://localhost:3000/imgs/org-banner.png');
+	height: 300px;
+	padding-top: 120px;
+	margin-bottom: 25px;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+}
+
 p {
 	font-family: 'Nixie One', cursive;
 	font-size: 16px;
 }
 
-.about {
+.content {
 	margin-bottom: 25px;
 }
