--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner"></div>
+<div class="aeroplan-banner banner"></div>
 
 <div class="container orgs-grid">
 	<div class="row donate-today">
