--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -1,7 +1,10 @@
+<div class="page-banner text-center">
+	<h2>ABOUT LEARNING BEYOND MILES</h2>
+</div>
+
 <div class="container">
 	<div class="row">
-		<div class="about col-md-8 col-md-offset-2 text-center">
-			<h2>ABOUT LEARNING BEYOND MILES</h2>
+		<div class="content col-md-8 col-md-offset-2 text-center">
 			<p>
 				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. The results: life-changing experiences that build a just, sustainable and thriving world.
 			</p>
@@ -12,17 +15,19 @@
 			<div class="row">
 				<div class="col-md-12">
 					<%= link_to("http://www.facebook.com", target: "blank") do %>
-						<img alt="facebook" src="">
+						<i class="fa fa-facebook fa-2x"></i>
 					<% end %>
 					<%= link_to("http://www.twitter.com", target: "blank") do %>
-						<img alt="twitter" src="">
+						<i class="fa fa-twitter fa-2x"></i>
 					<% end %>
 					<%= link_to("http://www.instagram.com", target: "blank") do %>
-						<img alt="instagram" src="">
+						<i class="fa fa-instagram fa-2x"></i>
 					<% end %>
 				</div>
 			</div>
 		</div>
+
+
 
 		<div class="col-md-8 col-md-offset-2 hidden-xs text-center">
 			<iframe class="embed-responsive-item" src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
