--- a/app/views/beyondmiles/contact.html.erb
+++ b/app/views/beyondmiles/contact.html.erb
@@ -1,7 +1,10 @@
+<div class="page-banner text-center">
+	<h2>CONTACT US</h2>
+</div>
+
 <div class="container">
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2 text-center">
-			<h2>CONTACT US</h2>
+		<div class="content col-md-8 col-md-offset-2 text-center">
 			<p>
 				Keep in touch and come say hello!
 			<p>
