--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -22,13 +22,13 @@
 	<div class="row">
 		<div class="col-sm-6 col-md-8 col-md-offset-2 text-center">
 			<%= link_to(@organization.facebook, target: "blank") do %>
-				<img alt="facebook" src="">
+				<i class="fa fa-facebook fa-2x"></i>
 			<% end %>
 			<%= link_to(@organization.twitter, target: "blank") do %>
-				<img alt="twitter" src="">
+				<i class="fa fa-twitter fa-2x"></i>
 			<% end %>
 			<%= link_to(@organization.instagram, target: "blank") do %>
-				<img alt="instagram" src="">
+				<i class="fa fa-instagram fa-2x"></i>
 			<% end %>
 		</div>
 	</div>
