--- a/app/assets/stylesheets/beyondmiles.css
+++ b/app/assets/stylesheets/beyondmiles.css
@@ -7,6 +7,13 @@
 	background-repeat: no-repeat;
 }
 
+@media(max-width: 767px){
+	.page-banner { 
+		height: 150px;
+		padding-top: 40px;
+	}
+}
+
 p {
 	font-family: 'Nixie One', cursive;
 	font-size: 16px;
