--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -7,7 +7,7 @@
 				Your Aeroplan Miles fuel the most dynamic learning initiatives around the world!
 				<br>Click below to see how your donations take Learning Beyond Miles.
 			</h3>
-      <button type="button" class="btn btn-donate">Donate Today</button>
+      <button type="button" class="btn" id="btn-donate">DONATE TODAY</button>
 		</div>
 	</div>
 
