add responsive media query for org grid

--- a/app/assets/stylesheets/beyondmiles.css
+++ b/app/assets/stylesheets/beyondmiles.css
@@ -2,7 +2,7 @@
 	background-image: url('http://localhost:3000/imgs/org-banner.png');
 	height: 300px;
 	padding-top: 120px;
-	margin-bottom: 25px;
+	margin-bottom: 35px;
 	background-size: 100% auto;
 	background-repeat: no-repeat;
 }
@@ -20,7 +20,7 @@ p {
 }
 
 .content {
-	margin-bottom: 25px;
+	margin-bottom: 25x;
 }
 
 #btn-contact {
