--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -3,30 +3,29 @@
 </div>
 
 <div class="container">
-	<div class="row">
-		<div class="content col-md-8 col-md-offset-2 text-center">
+	<div class="row text-center">
+		<div class="col-md-8 col-md-offset-2">
 			<p>
 				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. The results: life-changing experiences that build a just, sustainable and thriving world.
 			</p>
 			<p>
 				Since the launch of Beyond Miles in 2006, SWB has raised an impressive 12 million Aeroplan miles and fueled over 100 projects, positively impacting 20,000+ people in 50+ countries. The numbers only begin to tell the story.
 			</p>
-
-			<div class="row">
-				<div class="col-md-12">
-					<%= link_to("http://www.facebook.com", target: "blank") do %>
-						<i class="fa fa-facebook fa-2x"></i>
-					<% end %>
-					<%= link_to("http://www.twitter.com", target: "blank") do %>
-						<i class="fa fa-twitter fa-2x"></i>
-					<% end %>
-					<%= link_to("http://www.instagram.com", target: "blank") do %>
-						<i class="fa fa-instagram fa-2x"></i>
-					<% end %>
-				</div>
-			</div>
 		</div>
 
+		<div class="row">
+			<div class="content col-md-12">
+				<%= link_to("http://www.facebook.com", target: "blank") do %>
+					<i class="fa fa-facebook fa-2x"></i>
+				<% end %>
+				<%= link_to("http://www.twitter.com", target: "blank") do %>
+					<i class="fa fa-twitter fa-2x"></i>
+				<% end %>
+				<%= link_to("http://www.instagram.com", target: "blank") do %>
+					<i class="fa fa-instagram fa-2x"></i>
+				<% end %>
+			</div>
+		</div>
 
 
 		<div class="col-md-8 col-md-offset-2 hidden-xs text-center">
