--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -13,10 +13,10 @@
 
 	<div class="row seven-cols">
 		<% @organizations.each do |org| %>
-			<div class="org-info col-md-1 thumbnail text-center">
+			<div class="org-info col-md-1 thumbnail text-center" id="org-thumbnail">
 				<img class="org-image img-responsive" id="org-image" alt="<%= org.name %>" src="<%= org.image %>">
 
-				<div class="org-name-hq text-center">
+				<div class="org-name-hq text-center caption">
 					<%= link_to(org, class: "org-name") do %>
 						<%= org.name.upcase %>
 					<% end %>
