modify footer text and styling

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
 <footer class="footer">
 	<div class="container">
-		<p>Copyright 2015</p>
+		<p>
+			© 2015 by Schools Without Borders
+			<br>
+			<i>Schools Without Borders is not in any way affiliated with Doctors Without Borders. Doctors Without Borders is a registered Trademark of Bureau International de Medicins San Frontieres.</i>
+		</p>
 	</div>
 </footer>
