--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,7 +1,11 @@
-.footer {
-	margin-top: 100px;
-	padding-top: 20px;
-	height: 60px;
+footer {
+	margin-top: 75px;
+	padding-top: 22px;
+	height: 75px;
   background-color: #D1D2D4;
   font-family: 'Oswald', sans-serif;
+}
+
+footer p {
+	font-size: 12px;
 }
